Add bouncing arrow / typography updates

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<link rel="shortcut icon" href="assets/images/favicon.ico">
 		<![endif]-->
 		
+		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" media="all" href="public/css/style.css" />
 	</head>
 	
@@ -26,8 +27,9 @@
 		</header>
 
 		<div id="main_content">
-			<section id="portrait">
+			<section id="intro">
 				<h1>Hi! My name is Zack!</h1>
+				<div class="arrow animated bounce"></div>
 			</section>
 			
 			<section id="info">
