Begin yes add styles

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</section>
 			
 			<section id="info">
-				<h2>Tell me more!</h2>
+				<h2>Yes, <span>and?</span></h2>
 				
 				<p>I’m a Toronto based front-end developer, currently accepting freelance work locally and abroad. I’ve had the pleasure of working with great brands like Stella Artois, Honda, Kokanee, Air Miles, Budweiser, Bell, Citibank, Home Depot, Sleemans and KFC. I’m also baking pies at Empire, because who doesn’t love pie?</p>
 		
