--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-		<title></title>
+		<title>Zack Ginies | Front-end Developer</title>
 
 		<meta name="HandheldFriendly" content="True">
 		<meta name="MobileOptimized" content="320">
@@ -29,6 +29,7 @@
 		<div id="main_content">
 			<section id="intro">
 				<h1>Hi, I'm Zack!</h1>
+
 				<div class="arrow animated bounce"></div>
 			</section>
 			
@@ -73,10 +74,18 @@
 				</section>
 				
 			</section><!-- End INFO -->
+			
+			<section id="likes">
+				
+			</section><!-- End LIKES -->
+			
 		</div><!-- End MAIN CONTENT -->
 
 		<footer>
 		</footer>
+		
+		<script src="/public/js/lib/jquery-2.1.1.min.js"></script>
+		<script src="/public/js/build-ck.js"></script>
 		
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
