Update Better at section to include angularjs

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
 					<h3>and others I'm getting better at</h3>
 					
 					 <ul>
-						<li>Ember.js</li>
-						<li>Node.js</li>
+						<li>AngularJS</li>
 						<li>OOP Principles</li>
 						<li>MVC Design Patterns</li>
 					</ul>
