Update things I'm good at

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta name="MobileOptimized" content="320">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-		<meta name="description" content="Zack Ginies is a Toronto based front-end developer. He works primarily in HTML, CSS/LESS/SASS and Javascript. He has experience with PHP and has worked extensively with Wordpress. Currenly working at Teehan+Lax.">
+		<meta name="description" content="Zack Ginies is a Toronto based front-end developer. He works primarily in HTML, CSS/LESS/Sass and Javascript. He has experience with PHP and has worked extensively with Wordpress. Currenly working freelance.">
 		<link rel="apple-touch-icon" href="assets/images/apple-icon-touch.png">
 		<link rel="icon" href="assets/images/favicon.png">
 		
@@ -52,8 +52,10 @@
 					
 					<ul>
 						<li>Semantic and standards based HTML</li>
-						<li>CSS and CSS Pre-processors</li>
+						<li>CSS, Sass and LESS</li>
 						<li>Javascript and jQuery</li>
+						<li>JSON data structures</li>
+						<li>Responsive and mobile first builds</li>
 						<li>Cross-browser testing and support</li>
 					</ul>	
 				</section>
