Update to things i'm good at : remove floating list items

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<ul>
 						<li>Semantic and standards based HTML</li>
 						<li>CSS, Sass and LESS</li>
-						<li>Javascript and jQuery</li>
+						<li>Reusable Javascript and jQuery</li>
 						<li>JSON data structures</li>
 						<li>Responsive and mobile first builds</li>
 						<li>Cross-browser testing and support</li>
