Add usability and user experience to things i'm good at

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 						<li>JSON data structures</li>
 						<li>Responsive and mobile first builds</li>
 						<li>Cross-browser testing and support</li>
+						<li>User experience and usability design</li>
 					</ul>	
 				</section>
 				
